{
  "version": 4,
  "terraform_version": "1.15.3",
  "serial": 186,
  "lineage": "a5aa6373-b04d-6e75-fc26-0661dda013cd",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:security-group/sg-085b2c47876b3358b",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085b2c47876b3358b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "name_prefix": "",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d11de784dde3890b",
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:elastic-ip/eipalloc-0d11de784dde3890b",
            "association_id": "eipassoc-026a3bd596f37148e",
            "domain": "vpc",
            "id": "eipalloc-0d11de784dde3890b",
            "instance": "i-085800bf7145b2879",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-08e0c08e69790a088",
            "private_dns": "ip-10-0-0-10.ap-northeast-2.compute.internal",
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-3-36-236-149.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.236.149",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "eipalloc-0d11de784dde3890b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_key_pair.generated_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_a",
            "aws_vpc.historynet",
            "data.aws_ami.al2023",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f620183e9d9d992e",
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:elastic-ip/eipalloc-0f620183e9d9d992e",
            "domain": "vpc",
            "id": "eipalloc-0f620183e9d9d992e",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-34-151-119.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.151.119",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "historynet-nat-eip-a",
              "Project": "historynet"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "historynet-nat-eip-a",
              "Project": "historynet"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "eipalloc-0f620183e9d9d992e",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036c4724723e6fcad",
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:elastic-ip/eipalloc-036c4724723e6fcad",
            "domain": "vpc",
            "id": "eipalloc-036c4724723e6fcad",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-209-128-214.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.209.128.214",
            "public_ipv4_pool": "amazon",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "historynet-nat-eip-b",
              "Project": "historynet"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "historynet-nat-eip-b",
              "Project": "historynet"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "eipalloc-036c4724723e6fcad",
            "region": "ap-northeast-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0336244c75907197e",
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:instance/i-085800bf7145b2879",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085800bf7145b2879",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "historykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08e0c08e69790a088"
              }
            ],
            "primary_network_interface_id": "eni-08e0c08e69790a088",
            "private_dns": "ip-10-0-0-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.10",
            "public_dns": "ec2-43-203-233-226.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "43.203.233.226",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-058c763dd9065d757",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-066b383fe9da133e1",
            "tags": {
              "Name": "bastion",
              "Role": "bastion"
            },
            "tags_all": {
              "Name": "bastion",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065079d2aaf52c82e"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "i-085800bf7145b2879",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_key_pair.generated_key",
            "aws_security_group.bastion_sg",
            "aws_subnet.public_a",
            "aws_vpc.historynet",
            "data.aws_ami.al2023",
            "tls_private_key.ssh_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "was_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0336244c75907197e",
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:instance/i-05d2b1c26f1c83f6e",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05d2b1c26f1c83f6e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "historykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0191f92339f139b1b"
              }
            ],
            "primary_network_interface_id": "eni-0191f92339f139b1b",
            "private_dns": "ip-10-0-20-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.20.10",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8538f430eae9a4d",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03c1c9a09536c4854",
            "tags": {
              "Name": "was-a",
              "Role": "was"
            },
            "tags_all": {
              "Name": "was-a",
              "Role": "was"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-05c7a69cb4b0e1112",
              "sg-085b2c47876b3358b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "i-05d2b1c26f1c83f6e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.was_sg",
            "aws_subnet.was_a",
            "aws_vpc.historynet",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "was_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0336244c75907197e",
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:instance/i-094d24f2b14f5d9cc",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-094d24f2b14f5d9cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "historykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-081dca0dd61357948"
              }
            ],
            "primary_network_interface_id": "eni-081dca0dd61357948",
            "private_dns": "ip-10-0-21-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.21.10",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06dd4cca0b1e3dc36",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d92b35e4e98e1419",
            "tags": {
              "Name": "was-b",
              "Role": "was"
            },
            "tags_all": {
              "Name": "was-b",
              "Role": "was"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-05c7a69cb4b0e1112",
              "sg-085b2c47876b3358b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "i-094d24f2b14f5d9cc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.was_sg",
            "aws_subnet.was_b",
            "aws_vpc.historynet",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0336244c75907197e",
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:instance/i-0332ed31909a1c911",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0332ed31909a1c911",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "historykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-059ff9bdc8e615670"
              }
            ],
            "primary_network_interface_id": "eni-059ff9bdc8e615670",
            "private_dns": "ip-10-0-10-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.10",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0096d4b9b2cb0f667",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05accc3df32d5a9fb",
            "tags": {
              "Name": "web-a",
              "Role": "web"
            },
            "tags_all": {
              "Name": "web-a",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085b2c47876b3358b",
              "sg-0f9dbba79d40b70e5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "i-0332ed31909a1c911",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_lb.was_nlb",
            "aws_security_group.web_sg",
            "aws_subnet.was_a",
            "aws_subnet.was_b",
            "aws_subnet.web_a",
            "aws_vpc.historynet",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0336244c75907197e",
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:instance/i-09b64b93278e14a23",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09b64b93278e14a23",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "historykey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f9bc93ba66ecb2ea"
              }
            ],
            "primary_network_interface_id": "eni-0f9bc93ba66ecb2ea",
            "private_dns": "ip-10-0-11-10.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.11.10",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-013b7d76efdf74c7b",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d394bbbfa8d993fc",
            "tags": {
              "Name": "web-b",
              "Role": "web"
            },
            "tags_all": {
              "Name": "web-b",
              "Role": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-085b2c47876b3358b",
              "sg-0f9dbba79d40b70e5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "i-09b64b93278e14a23",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_lb.was_nlb",
            "aws_security_group.web_sg",
            "aws_subnet.was_a",
            "aws_subnet.was_b",
            "aws_subnet.web_b",
            "aws_vpc.historynet",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:internet-gateway/igw-07ea5c1bf30023ed3",
            "id": "igw-07ea5c1bf30023ed3",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "historynet-igw",
              "Project": "historynet"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "historynet-igw",
              "Project": "historynet"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "igw-07ea5c1bf30023ed3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "was_nlb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:loadbalancer/net/was-nlb/0180cc17f9b990e2",
            "arn_suffix": "net/was-nlb/0180cc17f9b990e2",
            "dns_name": "was-nlb-0180cc17f9b990e2.elb.ap-northeast-2.amazonaws.com",
            "dns_record_client_routing_policy": "any_availability_zone",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:loadbalancer/net/was-nlb/0180cc17f9b990e2",
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "was-nlb",
            "region": "ap-northeast-2",
            "secondary_ips_auto_assigned_per_subnet": 0,
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03c1c9a09536c4854"
              },
              {
                "subnet_id": "subnet-0d92b35e4e98e1419"
              }
            ],
            "subnets": [
              "subnet-03c1c9a09536c4854",
              "subnet-0d92b35e4e98e1419"
            ],
            "tags": {
              "Name": "was-nlb"
            },
            "tags_all": {
              "Name": "was-nlb"
            },
            "vpc_id": "vpc-0bbfcfe814551db58",
            "zone_id": "ZIBE1TIR4HY56"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:loadbalancer/net/was-nlb/0180cc17f9b990e2"
          },
          "dependencies": [
            "aws_subnet.was_a",
            "aws_subnet.was_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:loadbalancer/app/web-alb/4a242d4a128a1dd5",
            "arn_suffix": "app/web-alb/4a242d4a128a1dd5",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-alb-2070128643.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:loadbalancer/app/web-alb/4a242d4a128a1dd5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-alb",
            "preserve_host_header": false,
            "region": "ap-northeast-2",
            "security_groups": [
              "sg-085b2c47876b3358b",
              "sg-0d84401cb2750f7bc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-066b383fe9da133e1"
              },
              {
                "subnet_id": "subnet-0e81ed5b0fbb03780"
              }
            ],
            "subnets": [
              "subnet-066b383fe9da133e1",
              "subnet-0e81ed5b0fbb03780"
            ],
            "tags": {
              "Name": "web-alb"
            },
            "tags_all": {
              "Name": "web-alb"
            },
            "vpc_id": "vpc-0bbfcfe814551db58",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:loadbalancer/app/web-alb/4a242d4a128a1dd5"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:listener/app/web-alb/4a242d4a128a1dd5/c869c20913d5cdda",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:listener/app/web-alb/4a242d4a128a1dd5/c869c20913d5cdda",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:loadbalancer/app/web-alb/4a242d4a128a1dd5",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:listener/app/web-alb/4a242d4a128a1dd5/c869c20913d5cdda"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_lb.web_alb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public_a",
            "aws_subnet.public_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "was_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:listener/net/was-nlb/0180cc17f9b990e2/1cc1820fe6ad307f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:listener/net/was-nlb/0180cc17f9b990e2/1cc1820fe6ad307f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:loadbalancer/net/was-nlb/0180cc17f9b990e2",
            "mutual_authentication": [],
            "port": 5000,
            "protocol": "TCP",
            "region": "ap-northeast-2",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": null,
            "routing_http_response_access_control_allow_headers_header_value": null,
            "routing_http_response_access_control_allow_methods_header_value": null,
            "routing_http_response_access_control_allow_origin_header_value": null,
            "routing_http_response_access_control_expose_headers_header_value": null,
            "routing_http_response_access_control_max_age_header_value": null,
            "routing_http_response_content_security_policy_header_value": null,
            "routing_http_response_server_enabled": null,
            "routing_http_response_strict_transport_security_header_value": null,
            "routing_http_response_x_content_type_options_header_value": null,
            "routing_http_response_x_frame_options_header_value": null,
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": 350,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:listener/net/was-nlb/0180cc17f9b990e2/1cc1820fe6ad307f"
          },
          "dependencies": [
            "aws_lb.was_nlb",
            "aws_lb_target_group.was_tg",
            "aws_subnet.was_a",
            "aws_subnet.was_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "was_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168",
            "arn_suffix": "targetgroup/was-tg/06e567cdbc390168",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "5000",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "was-tg",
            "port": 5000,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "was-tg"
            },
            "tags_all": {
              "Name": "was-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": true,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b",
            "arn_suffix": "targetgroup/web-tg/e8ddc2e9a4b29b7b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-northeast-2",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web-tg"
            },
            "tags_all": {
              "Name": "web-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "was_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168,i-05d2b1c26f1c83f6e,5000",
            "port": 5000,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168",
            "target_id": "i-05d2b1c26f1c83f6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "port": 5000,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168",
            "target_id": "i-05d2b1c26f1c83f6e"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.was_a",
            "aws_lb_target_group.was_tg",
            "aws_security_group.was_sg",
            "aws_subnet.was_a",
            "aws_vpc.historynet",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "was_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168,i-094d24f2b14f5d9cc,5000",
            "port": 5000,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168",
            "target_id": "i-094d24f2b14f5d9cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "port": 5000,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/was-tg/06e567cdbc390168",
            "target_id": "i-094d24f2b14f5d9cc"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.was_b",
            "aws_lb_target_group.was_tg",
            "aws_security_group.was_sg",
            "aws_subnet.was_b",
            "aws_vpc.historynet",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b,i-0332ed31909a1c911,80",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b",
            "target_id": "i-0332ed31909a1c911"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b",
            "target_id": "i-0332ed31909a1c911"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.web_a",
            "aws_lb.was_nlb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.web_sg",
            "aws_subnet.was_a",
            "aws_subnet.was_b",
            "aws_subnet.web_a",
            "aws_vpc.historynet",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b,i-09b64b93278e14a23,80",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b",
            "target_id": "i-09b64b93278e14a23"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "port": 80,
            "region": "ap-northeast-2",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:459499397931:targetgroup/web-tg/e8ddc2e9a4b29b7b",
            "target_id": "i-09b64b93278e14a23"
          },
          "dependencies": [
            "aws_default_security_group.default",
            "aws_instance.web_b",
            "aws_lb.was_nlb",
            "aws_lb_target_group.web_tg",
            "aws_security_group.web_sg",
            "aws_subnet.was_a",
            "aws_subnet.was_b",
            "aws_subnet.web_b",
            "aws_vpc.historynet",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f620183e9d9d992e",
            "association_id": "eipassoc-065a5191edc215144",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0efc2cce907213d46",
            "network_interface_id": "eni-03df547874b08f6ec",
            "private_ip": "10.0.0.190",
            "public_ip": "3.34.151.119",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-066b383fe9da133e1",
            "tags": {
              "Managed": "terraform",
              "Name": "historynet-nat-a",
              "Project": "historynet"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "historynet-nat-a",
              "Project": "historynet"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "nat-0efc2cce907213d46",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.this",
            "aws_subnet.public_a",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-036c4724723e6fcad",
            "association_id": "eipassoc-047fbb16d0ef588de",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0aa83ee932eab18dc",
            "network_interface_id": "eni-0ad04767043da94a7",
            "private_ip": "10.0.1.202",
            "public_ip": "13.209.128.214",
            "region": "ap-northeast-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e81ed5b0fbb03780",
            "tags": {
              "Managed": "terraform",
              "Name": "historynet-nat-b",
              "Project": "historynet"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "historynet-nat-b",
              "Project": "historynet"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "nat-0aa83ee932eab18dc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.this",
            "aws_subnet.public_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_a_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0c6941e9d18e7c2711080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0efc2cce907213d46",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c6941e9d18e7c271",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c6941e9d18e7c271"
          },
          "dependencies": [
            "aws_eip.nat_a",
            "aws_internet_gateway.this",
            "aws_nat_gateway.a",
            "aws_route_table.private_a",
            "aws_subnet.public_a",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_b_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-048134f7d2f0e3dc31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0aa83ee932eab18dc",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-048134f7d2f0e3dc3",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-048134f7d2f0e3dc3"
          },
          "dependencies": [
            "aws_eip.nat_b",
            "aws_internet_gateway.this",
            "aws_nat_gateway.b",
            "aws_route_table.private_b",
            "aws_subnet.public_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-07ea5c1bf30023ed3",
            "id": "r-rtb-05d21ae5185fe3d2b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-05d21ae5185fe3d2b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-northeast-2",
            "route_table_id": "rtb-05d21ae5185fe3d2b"
          },
          "dependencies": [
            "aws_internet_gateway.this",
            "aws_route_table.public",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:route-table/rtb-0c6941e9d18e7c271",
            "id": "rtb-0c6941e9d18e7c271",
            "owner_id": "459499397931",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Managed": "terraform",
              "Name": "historynet-private-rt-a",
              "Project": "historynet"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "historynet-private-rt-a",
              "Project": "historynet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtb-0c6941e9d18e7c271",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:route-table/rtb-048134f7d2f0e3dc3",
            "id": "rtb-048134f7d2f0e3dc3",
            "owner_id": "459499397931",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Managed": "terraform",
              "Name": "historynet-private-rt-b",
              "Project": "historynet"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "historynet-private-rt-b",
              "Project": "historynet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtb-048134f7d2f0e3dc3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:route-table/rtb-05d21ae5185fe3d2b",
            "id": "rtb-05d21ae5185fe3d2b",
            "owner_id": "459499397931",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Managed": "terraform",
              "Name": "historynet-public-rt",
              "Project": "historynet"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "historynet-public-rt",
              "Project": "historynet"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtb-05d21ae5185fe3d2b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6ca2ee67b73572e",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c6941e9d18e7c271",
            "subnet_id": "subnet-0b0c785075794b744"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtbassoc-0f6ca2ee67b73572e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.db_a",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020df3d9e7fd63d0c",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-048134f7d2f0e3dc3",
            "subnet_id": "subnet-04901e249ca8f7f36"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtbassoc-020df3d9e7fd63d0c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.db_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03526df1b79b5b77c",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-05d21ae5185fe3d2b",
            "subnet_id": "subnet-066b383fe9da133e1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtbassoc-03526df1b79b5b77c",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a81a54c9739e809",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-05d21ae5185fe3d2b",
            "subnet_id": "subnet-0e81ed5b0fbb03780"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtbassoc-01a81a54c9739e809",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "was_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0769a352af64be687",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c6941e9d18e7c271",
            "subnet_id": "subnet-03c1c9a09536c4854"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtbassoc-0769a352af64be687",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.was_a",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "was_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be6aaa3175a58fe2",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-048134f7d2f0e3dc3",
            "subnet_id": "subnet-0d92b35e4e98e1419"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtbassoc-0be6aaa3175a58fe2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.was_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2a84da5450665f8",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0c6941e9d18e7c271",
            "subnet_id": "subnet-05accc3df32d5a9fb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtbassoc-0b2a84da5450665f8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.private_a",
            "aws_subnet.web_a",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "web_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b065391a1f7a4a4",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-048134f7d2f0e3dc3",
            "subnet_id": "subnet-0d394bbbfa8d993fc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "rtbassoc-06b065391a1f7a4a4",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_route_table.private_b",
            "aws_subnet.web_b",
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:security-group/sg-0d84401cb2750f7bc",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d84401cb2750f7bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "sg-0d84401cb2750f7bc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:security-group/sg-065079d2aaf52c82e",
            "description": "Bastion SG: allow SSH and ICMP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-065079d2aaf52c82e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-sg"
            },
            "tags_all": {
              "Name": "bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "sg-065079d2aaf52c82e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:security-group/sg-095369edcfc99c06b",
            "description": "MySQL SG: allow TCP 3306 from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-095369edcfc99c06b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mysql-sg",
            "name_prefix": "",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mysql-sg"
            },
            "tags_all": {
              "Name": "mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "sg-095369edcfc99c06b",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:security-group/sg-08ed384064a7d6b64",
            "description": "Redis SG: allow TCP 6379 from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08ed384064a7d6b64",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Redis TCP 6379",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "redis-sg"
            },
            "tags_all": {
              "Name": "redis-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "sg-08ed384064a7d6b64",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "was_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:security-group/sg-05c7a69cb4b0e1112",
            "description": "WAS SG: allow TCP/5000, SSH, ICMP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c7a69cb4b0e1112",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App TCP 5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "was-sg",
            "name_prefix": "",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "was-sg"
            },
            "tags_all": {
              "Name": "was-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "sg-05c7a69cb4b0e1112",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_lg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:security-group/sg-0ef0e447a9d4c93e2",
            "description": "Web Load Gateway SG: allow HTTP and HTTPS from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ef0e447a9d4c93e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "web-lg-sg",
            "name_prefix": "",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-lg-sg"
            },
            "tags_all": {
              "Name": "web-lg-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "sg-0ef0e447a9d4c93e2",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:security-group/sg-0f9dbba79d40b70e5",
            "description": "Web SG: allow HTTP/SSH/ICMP from anywhere",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9dbba79d40b70e5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ICMP",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "sg-0f9dbba79d40b70e5",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:subnet/subnet-0b0c785075794b744",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b0c785075794b744",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459499397931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "db-a",
              "Project": "historynet",
              "Tier": "private"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "db-a",
              "Project": "historynet",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "subnet-0b0c785075794b744",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:subnet/subnet-04901e249ca8f7f36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.31.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04901e249ca8f7f36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459499397931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "db-b",
              "Project": "historynet",
              "Tier": "private"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "db-b",
              "Project": "historynet",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "subnet-04901e249ca8f7f36",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:subnet/subnet-066b383fe9da133e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066b383fe9da133e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459499397931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "public subnet-a",
              "Project": "historynet",
              "Tier": "public"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "public subnet-a",
              "Project": "historynet",
              "Tier": "public"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "subnet-066b383fe9da133e1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:subnet/subnet-0e81ed5b0fbb03780",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e81ed5b0fbb03780",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "459499397931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "public subnet-b",
              "Project": "historynet",
              "Tier": "public"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "public subnet-b",
              "Project": "historynet",
              "Tier": "public"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "subnet-0e81ed5b0fbb03780",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:subnet/subnet-03c1c9a09536c4854",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03c1c9a09536c4854",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459499397931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "was-a",
              "Project": "historynet",
              "Tier": "private"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "was-a",
              "Project": "historynet",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "subnet-03c1c9a09536c4854",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "was_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:subnet/subnet-0d92b35e4e98e1419",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d92b35e4e98e1419",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459499397931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "was-b",
              "Project": "historynet",
              "Tier": "private"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "was-b",
              "Project": "historynet",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "subnet-0d92b35e4e98e1419",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:subnet/subnet-05accc3df32d5a9fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05accc3df32d5a9fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459499397931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "web-a",
              "Project": "historynet",
              "Tier": "private"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "web-a",
              "Project": "historynet",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "subnet-05accc3df32d5a9fb",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:subnet/subnet-0d394bbbfa8d993fc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d394bbbfa8d993fc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "459499397931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "web-b",
              "Project": "historynet",
              "Tier": "private"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "web-b",
              "Project": "historynet",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bbfcfe814551db58"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "subnet-0d394bbbfa8d993fc",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.historynet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "historynet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:459499397931:vpc/vpc-0bbfcfe814551db58",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02f4a6e25bf5bd3cb",
            "default_route_table_id": "rtb-09d3b79799a220ed6",
            "default_security_group_id": "sg-085b2c47876b3358b",
            "dhcp_options_id": "dopt-0b94fa406c7e96164",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bbfcfe814551db58",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09d3b79799a220ed6",
            "owner_id": "459499397931",
            "region": "ap-northeast-2",
            "tags": {
              "Managed": "terraform",
              "Name": "historynet",
              "Project": "historynet"
            },
            "tags_all": {
              "Managed": "terraform",
              "Name": "historynet",
              "Project": "historynet"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "459499397931",
            "id": "vpc-0bbfcfe814551db58",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}